envoyfilter/http-header-count-size-control.yaml.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: http-header-count-size-control
spec:
  configPatches:
  - applyTo: CLUSTER
    patch:
      operation: MERGE
      value:
        common_http_protocol_options:
          max_headers_count: 200 # default is 100
        max_request_headers_kb: 96 # 96 KiB is the maxumum allowed, default is 60 KiB.
  - applyTo: NETWORK_FILTER
    match:      
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: MERGE
      value:
        typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
          common_http_protocol_options:
            max_headers_count: 200 # default is 100
          max_request_headers_kb: 96 # 96 KiB is the maxumum allowed, default is 60 KiB.
